Fix contrast error of text in <p> tag of the start of the <main> tag. Changed from light grey to white.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -434,7 +434,7 @@ main p {
     font-size: 1.1em;
     text-align: center;
     margin-bottom: 30px;
-    color: #cccccc;
+    color: white;
 }
 
 /* Stats section */
